III-1485 fix alignment badge on firefox

--- a/app/styles/side-bar.less
+++ b/app/styles/side-bar.less
@@ -32,6 +32,7 @@
   position: absolute;
   color: #eee;
   z-index: 1039;
+  -webkit-font-smoothing: antialiased;
 
   // visual trick to fake that absolute positioned sidebar sticks to the bottom of the screen
   &:after {
@@ -228,4 +229,10 @@
   display: block;
   margin: 5px 0;
   opacity: 0.5;
+}
+
+.menu-text-badge{
+  position: absolute;
+  right: 6px;
+  top: 8px;
 }
